# kd

./: CMakeLists.txt  CMakeLists.txt~  README  changes.txt  kd.cpp  kd.cpp~  kd.h  kd.h~  kd.kdev4  logger.cpp  logger.cpp~  logger.h  logger.h~  main.cpp  main.cpp~  togit.sh
.kdev4/: kd.kdev4
1/: kd.cpp  req.txt
sketch/: kd.cpp  untitled.ui
